# rmq-admin-rs

./: Cargo.toml  README.md
amqprs-test/: Cargo.toml
amqprs-test/src/: main.rs
docker/: docker-compose.yaml
rmq-admin-sdk/: Cargo.toml
rmq-admin-sdk/src/: lib.rs  main.rs
rmq-admin-sdk/src/modules/: client.rs
