[package]
name = "amqprs-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.5.2"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.0"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["full"] }
